tests/models/enum/unnamed/f64/pass/default.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(default = 1.0)]
        f64
    ),
}
fn main() {}
