tests/models/enum/unnamed/f64/fail/default.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(default = 1)]
        f64
    ),
}
fn main() {}
